--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="google-site-verification" content="TpOBG-_xs5_rtY0PDaefo9ITb-zhuwbPidXqE510gMw" />
+ <title>Water & Sewer Company in New York | Empire Water Main & Sewer Inc</title> 
 <!-- Primary Meta Tags -->
 <meta name="title" content="Empire Water Main & Sewer Inc | NYC Water & Sewer Contractor">
 <meta name="description" content="Empire Water Main & Sewer Inc is a licensed & insured NYC water and sewer contractor serving Manhattan, Brooklyn, Queens, Bronx & Staten Island. Water main repair, sewer line replacement, emergency service 24/7. Call +1 (718) 715-4862.">
@@ -587,4 +589,5 @@
   <a href="tel:+17187154862" style="color:white; text-decoration:none; font-weight:600;"><i class="fas fa-phone-alt"></i> +1 (718) 715-4862</a>
 </div>
 </body>
+
 </html>
